--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -1,35 +1,31 @@
-<form #heroForm="ngForm">
-    <div class="container">
+<form [formGroup]="firstContactForm" >
+    <div class="container mb-5">
         <div class="row">
             <div class="form-group col-xs-12 col-sm-6">
-                <label for="name">Ansprechpartner</label>
-                <input type="text" placeholder="Firma oder Name" class="form-control" id="name"
-                    required
-                    [(ngModel)]="model.name" name="name">
+                <label class="label">Ansprechpartner</label>
+                <input class="input" class="form-control" type="text" formControlName="name" placeholder="Name">
             </div>
 
             <div class="form-group col-xs-12 col-sm-6">
-                <label for="email">Email-Adresse</label>
-                <input type="text"  class="form-control" placeholder="mail@me.com" id="email"
-                    [(ngModel)]="model.email" name="email">
+              <label class="label">Email-Adresse</label>
+              <input class="input" class="form-control" type="email" formControlName="email" placeholder="E-Mail">
             </div>
 
             <div class="form-group col-xs-12 col-sm-6">
-                <label for="time">Zeithorizont</label>
-                <input type="text"  class="form-control" placeholder="in Wochen (optional)" id="time"
-                    [(ngModel)]="model.time" name="time">
+              <label class="label">Zeithorizont</label>
+              <input class="text" class="form-control" type="number" formControlName="time" placeholder="Time">
             </div>
 
             <div class="form-group col-xs-12 col-sm-6">
-                <label for="budget">Budget</label>
-                <input type="text"  class="form-control" placeholder="in EUR (optional)" id="budget"
-                    [(ngModel)]="model.time" name="budget">
+                <label class="label">Budget</label>
+                <input class="text" class="form-control" type="number" formControlName="budget" placeholder="Budget">
             </div>
 
             <div class="form-group col-xs-12 col-sm-12">
-                <label for="description">Projektbeschreibung</label>
-                <textarea type="text" rows="8" class="form-control" placeholder="Projektbeschreibung" id="description"
-                    [(ngModel)]="model.description" name="description"></textarea>
+                <label class="label">Projektbeschreibung</label>
+                <textarea type="text" rows="8"  formControlName="description"  class="form-control"
+                          placeholder="Projektbeschreibung" id="description"
+                          name="description"></textarea>
             </div>
         </div>
     </div>
