--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="firstContactForm" data-netlify="true" name="contact" action="/">
+<form data-netlify="true" name="contact" action="/">
     <div class="container mb-5">
         <div class="row">
             <div class="form-group col-xs-12 col-sm-6">
@@ -27,6 +27,10 @@
                           placeholder="Projektbeschreibung" id="description"
                           name="description"></textarea>
             </div>
+
+            <p>
+              <button type="submit">Send</button>
+            </p>
         </div>
     </div>
 </form>
