--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -34,7 +34,7 @@
         </div>
     </div>
 </form>-->
-<form name="contact" method="POST" data-netlify="true">
+<form name="contact" method="POST" netlify data-netlify="true">
   <p>
     <label>Your Name: <input type="text" name="name" /></label>
   </p>
