--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -1,4 +1,4 @@
-<!--<form [formGroup]="firstContactForm" data-netlify="true" name="contact" action="/">
+<form [formGroup]="firstContactForm" data-netlify="true" name="contact" action="/">
     <div class="container mb-5">
         <div class="row">
             <div class="form-group col-xs-12 col-sm-6">
@@ -29,28 +29,8 @@
             </div>
 
             <p>
-              <button type="submit">Send</button>
+              <button (click)="submitForm()">Send</button>
             </p>
         </div>
     </div>
-</form>-->
-<form name="contact" method="POST" netlify data-netlify="true">
-  <p>
-    <label>Your Name: <input type="text" name="name" /></label>
-  </p>
-  <p>
-    <label>Your Email: <input type="email" name="email" /></label>
-  </p>
-  <p>
-    <label>Your Role: <select name="role[]" multiple>
-      <option value="leader">Leader</option>
-      <option value="follower">Follower</option>
-    </select></label>
-  </p>
-  <p>
-    <label>Message: <textarea name="message"></textarea></label>
-  </p>
-  <p>
-    <button type="submit">Send</button>
-  </p>
 </form>
