try reduced form

--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -1,33 +1,12 @@
-<form [formGroup]="firstContactForm" data-netlify="true" name="contact" action="/">
-    <div class="container mb-5">
+<form [formGroup]="firstContactForm" data-netlify="true" name="wrapper-form" action="/">
+  <input type="hidden" name="form-name" value="contact" />
+
+  <div class="container mb-5">
         <div class="row">
             <div class="form-group col-xs-12 col-sm-6">
                 <label class="label">Ansprechpartner</label>
                 <input class="input" class="form-control" type="text" formControlName="name" placeholder="Name">
             </div>
-
-            <div class="form-group col-xs-12 col-sm-6">
-              <label class="label">Email-Adresse</label>
-              <input class="input" class="form-control" type="email" formControlName="email" placeholder="E-Mail">
-            </div>
-
-            <div class="form-group col-xs-12 col-sm-6">
-              <label class="label">Zeithorizont</label>
-              <input class="text" class="form-control" type="number" formControlName="time" placeholder="Time">
-            </div>
-
-            <div class="form-group col-xs-12 col-sm-6">
-                <label class="label">Budget</label>
-                <input class="text" class="form-control" type="number" formControlName="budget" placeholder="Budget">
-            </div>
-
-            <div class="form-group col-xs-12 col-sm-12">
-                <label class="label">Projektbeschreibung</label>
-                <textarea type="text" rows="8"  formControlName="description"  class="form-control"
-                          placeholder="Projektbeschreibung" id="description"
-                          name="description"></textarea>
-            </div>
-
             <p>
               <button (click)="submitForm()">Send</button>
             </p>
